# irrigation_fw-app

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  config.sh  debug.sh  irrigation_mcuapp.ld  openocd.cfg  vscode-gdb.sh
cmake/: GNU-ARM-Toolchain.cmake
gdb/: init_attach  init_load
include/: Common.h  Ident.h  Version.h  mcu.h  types.h
include/config/: GPIOConfig.h  dmaConfig.h  gpioDefs.h
include/control/: control.h
include/dev/eeprom/: EEPROM.h  EEPROM_LowLevel.h
include/dev/ethernet/: w5500_lowlevel.h
include/dev/rtc/: rtc.h  rtcDisplay.h
include/dev/spi/: SPI_Common.h  SPI_EEPROM.h  SPI_WIZ.h
include/dev/tm1637/: tm1637.h
include/dev/uart/: UART_Common.h  UART_Config.h
include/hal/gpio/: halGpio.h
include/io/: io.h
include/protocol/: socket.h
include/security/: SHA512.h
include/serial/: serialDebug.h
include/system/: System.h  syscall.h  tasking.h  timing.h
include/utils/: CRC32C.h  CircularQueue.h  crc16.h  datetime.h  gpio.h  memory.h
src/: Debug.c  Error.c  main.c
src/config/: gpioDefs.c
src/control/: control.c
src/dev/eeprom/: EEPROM.c  EEPROM_LowLevel.c
src/dev/ethernet/: w5500_lowlevel.c
src/dev/rtc/: rtc.c  rtcDisplay.c
src/dev/spi/: SPI_Common.c  SPI_EEPROM.c  SPI_WIZ.c
src/dev/timer_common/: Timer_Common.c
src/dev/tm1637/: tm1637.c
src/dev/uart/: UART_Common.c  UART_Config.c
src/hal/gpio/: halGpio.c
src/io/: io.c
src/protocol/: socket.c
src/security/: SHA512.c
src/serial/: serialDebug.c
src/system/: System.c  SystemISR.c  newlib-syscalls.c  startup_stm32f446xx.s  syscall.c  tasking.c  timing.c
src/utils/: CRC32C.c  CircularQueue.c  Utils.c  crc16.c  datetime.c
